--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
+    id "com.gradle.build-scan" version "3.0"
 }
-
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -13,4 +13,15 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.testng:testng:7.0.0'
+}
+buildScan {
+
+    server = "https://gradle-enterprise.mycompany.com"
+    allowUntrustedServer = true
+    termsOfServiceUrl = "https://gradle.com/terms-of-service";
+    termsOfServiceAgree = "yes"
+}
+
+test {
+    useTestNG()
 }
