--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-}
 
+}
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -12,4 +12,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.testng:testng:7.0.0'
+}
+
+
+test {
+    useTestNG()
 }
