Revert "Connection TestNg"
This reverts commit 48c772f0c75fe773f47680565baf9c10135678bf.

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ dependencies {
     implementation 'org.testng:testng:7.0.0'
 }
 buildScan {
- //   allowUntrustedServer = true
+
+    server = "https://gradle-enterprise.mycompany.com"
+    allowUntrustedServer = true
     termsOfServiceUrl = "https://gradle.com/terms-of-service";
     termsOfServiceAgree = "yes"
 }
