--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,1 +1,19 @@
 apply plugin: 'java'
+apply plugin: 'application'
+
+group 'com.test'
+version '1.0-SNAPSHOT'
+
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+    jcenter()
+}
+
+dependencies {
+    compile "org.testng:testng:6.9.12"
+}
+test {
+    useTestNG()
+}
