--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     compile group: 'com.beust', name: 'jcommander', version: '1.48'
     compile group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.8'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.1'
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
 test {
     useTestNG()
