--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.1'
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.38'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.1.0.Final'
 
 }
 test {
